[package]
name = "app-zony-100m"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
rfd = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
csv = "1.3"
tokio = "1.49.0"
regex = "1.12.2"
umya-spreadsheet = "2.3.3"
calamine = "0.32.0"
geo = "0.32.0"

[profile.release]
opt-level = 3         # Maximálna optimalizácia na rýchlosť (predvolené je 3, ale pre istotu).
lto = "fat"           # Link Time Optimization: "fat" je agresívnejšie ako "thin". Umožňuje optimalizáciu naprieč všetkými crate-mi.
codegen-units = 1     # Núti kompilátor spracovať kód v jednom vlákne. Spomalí to kompiláciu, ale vytvorí rýchlejší kód.
panic = "abort"       # Pri panike program okamžite skončí bez "odvíjania" stacku. Zvyšuje rýchlosť a znižuje veľkosť.
strip = true          # Odstráni debug symboly. Dramaticky zmenší veľkosť súboru bez vplyvu na rýchlosť.
rpath = false         # Vypne hľadanie dynamických knižníc v rpath (menšia veľkosť).
debug = false         # Žiadne debug info v release builde.
